# postgresql

contrib/: Makefile  meson.build
contrib/pg_collect_advice/: Makefile  collector.c  interface.c  meson.build  pg_collect_advice--1.0.sql  pg_collect_advice.control  pg_collect_advice.h
contrib/pg_collect_advice/expected/: local_collector.out
contrib/pg_collect_advice/sql/: local_collector.sql
contrib/pg_collect_advice/t/: 001_regress.pl  001_shared_collector.pl
contrib/pg_plan_advice/: .gitignore  pg_plan_advice.c  pgpa_planner.c  pgpa_trove.c  pgpa_walker.c
contrib/pg_stash_advice/: Makefile  meson.build  pg_stash_advice.c  stashfuncs.c  stashpersist.c
contrib/pg_stash_advice/expected/: pg_stash_advice.out
contrib/pg_stash_advice/sql/: pg_stash_advice.sql
doc/src/sgml/: contrib.sgml  filelist.sgml  pgcollectadvice.sgml  pgstashadvice.sgml
src/backend/optimizer/path/: joinpath.c
src/backend/optimizer/plan/: planagg.c  planner.c
src/backend/optimizer/prep/: prepjointree.c
src/backend/optimizer/util/: pathnode.c
src/backend/replication/: slotfuncs.c
src/include/nodes/: pathnodes.h
src/include/optimizer/: pathnode.h  planner.h
src/test/modules/test_plan_advice/: Makefile  test_plan_advice.c
src/test/modules/test_plan_advice/t/: 001_replan_regress.pl
src/test/regress/expected/: incremental_sort.out
src/tools/pgindent/: typedefs.list
